src/test/resources/30/single/opf/valid/cmt-preferred.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" xml:lang="en" unique-identifier="q">
<metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
  <dc:title id="title">Minimal EPUB 3.0</dc:title>
  <dc:language>en</dc:language>
  <dc:identifier id="q">NOID</dc:identifier>
  <meta property="dcterms:modified">2017-06-14T00:00:01Z</meta>
</metadata>
<manifest>
	<item id="nav"  href="nav.xhtml" media-type="application/xhtml+xml" properties="nav"/>
	<item id="content_001"  href="content_001.xhtml" media-type="application/xhtml+xml"/>
	<!-- the following items should use preferred media types -->
	<item id="js_001"  href="script_001.js" media-type="text/javascript"/>
	<item id="font_001"  href="font_001.otf" media-type="application/vnd.ms-opentype"/>
	<item id="font_002"  href="font_002.woff" media-type="application/font-woff"/>
	<item id="font_003"  href="font_003.ttf" media-type="application/font-sfnt"/>
</manifest>
<spine>
  <itemref idref="content_001" />
</spine>
</package>